<resources>
    <string name="app_name">MappEnv</string>
    <string name="title_activity_login">MappEnv</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_title">BioP</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_rank">RankActivity</string>
    <string name="title_activity_photo_result">PhotoResultActivity</string>
    <string name="title_activity_photo_result_form">フォトビューア</string>
    <string name="label_loadingnotification">読み込み中です...</string>
    <string name="dialog_title">マップデータ</string>
    <string name="title_activity_no_upload">NoUploadActivity</string>
    <string name="title_grid_menu">操作メニュー</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_text1">BioPhoto</string>
    <string name="nav_item_camera">カメラ</string>
    <string name="nav_item_list">リスト</string>
    <string name="nav_item_map">マップ</string>
    <string name="nav_item_rank">ランキング</string>
    <string name="pref_dialog_object_name">写真の名前入力</string>
    <string name="pref_dialog_object_name_summ">撮影時に写真の名前の入力欄を表示するか</string>
    <string name="title_toolbar">MappEnv</string>
    <string name="title_list_text">Total Score Ranking</string>
    <string name="rank_toolbar">ランキング</string>
    <string name="rank_detail">個人の詳細</string>
    <string name="wrong_text">英数字を入力してください</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- camera-->
    <string name="camera_err_getlocation">位置情報が取得できません\nしばらくお待ち下さい</string>
    <string name="hint_photoname">unknown</string>
    <string name="camera_title_detectimg">写真の判定を行います</string>
    <string name="label_upload">写真をアップロードしますか?</string>
    <string name="label_yes">はい</string>
    <string name="label_uploading">写真をアップロードします</string>
    <string name="camera_err_network">ネットワークに接続できません。\nこの機能はネットワーク接続時のみ利用できます。</string>
    <string name="label_reserveconfirmation">保存しておきますか?</string>
    <string name="no_dialog">いいえ</string>
    <string name="label_reservenotification">保存しました</string>
    <string name="not_on_gps">GPS機能が停止しています</string>
    <string name="turn_on_gps">位置情報をオンにしますか？</string>
    <string name="unknown_name">unknown</string>
    <string name="edit_pname">画像に名前をつける場合は入力してください</string>
    <string name="cameramap_button">地図を表示</string>
    <string name="photopreview_btn_label_transitionannotation">植物の特徴を記録する</string>
    <string name="annotation_label_empty">情報がありません</string>
    <string name="annotation_btn_label_back">カメラ画面に戻る</string>

    <string name="uploaded">画像をアップロードしました。\n獲得した点数:</string>
    <string name="cant_upload">アップロードできませんでした</string>
    <string name="do_you_reserved">保存しておきますか?</string>
    <string name="now_uploading">通信中です</string>
    <string name="score1">点数1:</string>
    <string name="score2">点数2:</string>
    <string name="upload_error">サーバとの通信でエラーが発生しました</string>
    <string name="upload_error_return">Somethingwentwrong</string>


    <!-- otherphotogetter -->
    <string name="photo_loading">画像読み込み中</string>

    <!-- login_activity -->
    <string name="set_id"> IDを設定します</string>
    <string name="label_inputidrequest">IDを入力してください</string>
    <string name="ok_dialog">OK</string>
    <string name="your_id_ok">IDは変更できません\n以下のIDでいいですか？</string>
    <string name="label_id">ID:</string>
    <string name="your_id_is">あなたのIDは</string>

    <!-- map activity -->

    <string name="cant_open_map">マップが開けません</string>
    <string name="map_load_button">周辺の写真を読み込む</string>

    <!-- other users photo listfragment -->
    <string name="data_load_button">さらに読み込む</string>

    <!-- noupload activity -->

    <string name="label_deleteimages">画像の削除</string>
    <string name="label_deleteconfirmation">削除してもよろしいですか？</string>
    <string name="label_deletenotification">削除しました</string>
    <string name="file_edit">ファイル操作</string>

    <!-- other photo eval -->
    <string name="push_good">Good評価を送信しました</string>
    <string name="push_bad">Bad評価を送信しました</string>

    <!-- photoresultform-->
    <string name="error">error</string>

    <!-- rank custom adapter -->
    <string name="pos_rank">pos_rank</string>
    <string name="Ranking_label_gettingcategory">通信中</string>


    <!-- tablist -->
    <string name="photoresult_label_photolist">フォトリスト</string>
    <string name="label_nouploadlist">未アップロード</string>

    <!-- tag ranking -->
    <string name="rankings">ランキング</string>
    <string name="ranking_count">撮影枚数 : </string>
    <string name="ranking_points">獲得点数 :</string>


    <!-- title activity -->
    <string name="photo_num">Photo:</string>


    <!-- navgation -->
    <string name="nav_upload">全部アップロード</string>
    <string name="nav_point">ポイント </string>
    <string name="nav_photonum">写真 : </string>
    <string name="title_nav_menu">その他の操作</string>
    <string name="nav_reset">reset_upload</string>

    <!-- photomulti -->
    <string name="allupload_label_numberofuploadedphoto">枚をアップロードしました</string>
    <string name="toast_cant_upload">枚はアップロードできませんでした</string>
    <string name="toast_network_not_work">サーバが</string>

    <!-- other_users_eval -->
    <string name="evaluate_other_photos">他プレイヤーの撮影結果を評価しよう！</string>

    <!-- recyclerview-->
    <string name="title_recyclerview_text">読み込み中</string>

    <!-- menu_friend -->
    <string name="add_friend">友達追加</string>
    <!-- friend list adapter -->
    <string name="friend">友達</string>
    <string name="notfriend">申請中</string>
    <string name="requested">申請</string>

    <!-- friend request fragment -->
    <string name="no_user_message">該当するユーザーはいません</string>
    <!-- friend request form fragment -->
    <string name="friend_request_sent_text">友達申請を送りました</string>
    <string name="is_existed">申請が存在します</string>
    <string name="label_request">Request</string>


    <!-- something to wrong -->

    <!-- friend activity -->
    <string name="friend_toolbar">フレンドリスト</string>
    <string name="friend_accept_title">承認</string>
    <string name="friend_accept_message">承認しますか?</string>
    <string name="label_err_somethingwrong">エラーが発生しました</string>

    <!--  anotation list -->
    <string name="annotation_label_expandmessage">展開する</string>
    <string name="no_data">データがありません</string>
    <string name="label_add">add</string>
    <string name="label_del">del</string>
    <string name="toggle_choice_mode">toggle</string>
    <string name="confirm_delete">撮影結果を削除してもよろしいですか？</string>
    <string name="label_getinfonotification">情報を取得中...</string>
    <string name="upload_queue_null">アップロードできるファイルがありません</string>
    <string name="noupload_err_network">通信中にエラーが発生しました。\n処理を中断します。</string>
    <string name="noupload_err_database">データベースへの書き込みでエラーが発生しました。\n処理を中断します。</string>
    <string name="noupload_success">アップロードに成功しました。</string>
    <string name="label_photoname">名前なし</string>
    <string name="label_rebootconfirmation">アプリの再起動が必要です</string>
    <string name="label_unavailablenotification">機能を利用できません</string>
    <string name="label_permissionconfirmation">この機能の利用には権限が必要です</string>


</resources>
