<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_photonum"
            android:title="@string/nav_photonum" />
        <item
            android:id="@+id/nav_point"
            android:title="@string/nav_point"
            />
    </group>


    <item android:title="@string/title_grid_menu">
        <menu>
        <item
            android:id="@+id/nav_camera"
            android:title="@string/nav_item_camera" />
        <item
            android:id="@+id/nav_list"
            android:title="@string/nav_item_list" />
        <item
            android:id="@+id/nav_map"
            android:title="@string/nav_item_map" />
        <item
            android:id="@+id/nav_rank"
            android:title="@string/nav_item_rank" />
        </menu>
    </item>

    <item android:title="@string/title_nav_menu">
        <menu>

    <item android:id="@+id/nav_upload"
        android:title="@string/nav_upload" />
        </menu>
    </item>

    <item android:id="@+id/nav_reset_upload_state"
        android:title="@string/nav_reset"/>

</menu>
