<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/text_frame"
        android:orientation="vertical"
        tools:context="biopprimrose.d123.d5p.shuger.of.lamp.biopprim.Views.PhotoPreviewFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/label_upload"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/upload_img"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_pname"
                    android:layout_gravity="center|bottom"
                    android:id="@+id/editpname"
                    android:inputType="text"
                    android:layout_weight="1"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="7"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/upload_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/label_yes"
                        android:layout_marginRight="10dp"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                    <!--android:text="@string/yes_dialog" -->

                    <Button
                        android:id="@+id/save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/no_dialog"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                </LinearLayout>



            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>
</FrameLayout>
